Edited strings.xml and SettingsFragment.java for all language  -Added strings for graph color, point color, line, color, paint style, day, days, Edited GraphFragment.java  -Added counter next to label for weekly, monthly and yearly use. Edited GraphView.java  -Fixed a step when plotting label data points

--- a/app/src/main/res/layout/fragment_settings_popup_colors.xml
+++ b/app/src/main/res/layout/fragment_settings_popup_colors.xml
@@ -16,6 +16,7 @@
             android:id="@+id/text_view_settings_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/text_view_point_color"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:paddingBottom="10dp"
