Added baseline_person_40.xml Edited build.gradle.kts   -Change version 1.0 to 1.0.1 Edited DashboardFragment.java   -Operate with isLent variable Edited Database.java   -Changed database name "smoking_tracker_1" to "smoking_tracker" Edited History.java   -Added isLent variable Edited HistoryAdapter.java   -Added functionality for show/hide imageButton (isLent) Edited Manager.java   -Added isLent variable Edited Queries.java   -Added functionality for management variable isLent Edited strings.xml   -Added translation for image_button_is_lent and text_view_given_cigarette

--- a/app/src/main/res/layout/fragment_dashboard_history.xml
+++ b/app/src/main/res/layout/fragment_dashboard_history.xml
@@ -20,6 +20,16 @@
         android:ellipsize="end"/>
 
     <ImageButton
+        android:id="@+id/image_button_is_lent"
+        android:layout_width="48dp"
+        android:layout_height="28dp"
+        android:contentDescription="@string/image_button_is_lent"
+        android:src="@drawable/baseline_person_40"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginStart="8dp"
+        android:visibility="gone"/>
+
+    <ImageButton
         android:id="@+id/image_button_edit"
         android:layout_width="48dp"
         android:layout_height="48dp"
