--- a/app/src/main/res/layout/fragment_dashboard_popup.xml
+++ b/app/src/main/res/layout/fragment_dashboard_popup.xml
@@ -47,6 +47,35 @@
         </LinearLayout>
     </HorizontalScrollView>
 
+    <LinearLayout
+        android:id="@+id/linear_layout_given_cigarette"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="16dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/text_view_give_cigarette"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="@string/text_view_given_cigarette"
+            android:textColor="@color/black"
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:ellipsize="end"/>
+
+        <CheckBox
+            android:id="@+id/check_box_given_cigarette"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="8dp"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/button_confirm"
         android:layout_width="match_parent"
